--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = siuVic
 	url = https://github.com/vs2961/13_signal_vs.git
 	branch = main
+[submodule "nathMic"]
+	path = nathMic
+	url = https://github.com/Michael-Nath/mnath_signal.git
+	branch = master
