--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = yeGen
 	url = https://github.com/Gene1212/13_signal.git
 	branch = master
+[submodule "raoIva"]
+	path = raoIva
+	url = https://github.com/irao12/systems_13_signal
+	branch = main
