--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = raoIva
 	url = https://github.com/irao12/systems_13_signal
 	branch = main
+[submodule "jiangVin"]
+	path = jiangVin
+	url = https://github.com/vjiang10/13_signal_vj.git
+	branch = master
