--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,7 @@
 	path = leeSte
 	url = https://github.com/kevidgel/13_signal
 	branch = main
+[submodule "maoMad"]
+	path = maoMad
+	url = https://github.com/madelynxmao/13_signal.git
+	branch = main
