--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,7 @@
 	path = zhangDev
 	url = https://github.com/dzhang10/hw_13_signal.git
 	branch = master
+[submodule "zhaoGav"]
+	path = zhaoGav
+	url = https://github.com/gzhao10/hw13.git
+	branch = main
