--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,7 @@
 [submodule "chenJac"]
 	path = chenJac
 	url = https://github.com/jchen2003/13_signal.git
+[submodule "zhengYul"]
+	path = zhengYul
+	url = https://github.com/yzheng10/13_Signal.git
+	branch = main
