--- a/.gitmodules
+++ b/.gitmodules
@@ -81,3 +81,7 @@
 	path = prasadAmi
 	url = https://github.com/AmitPr/mks65c-13_signal.git
 	branch = master
+[submodule "hirotaEis"]
+	path = hirotaEis
+	url = https://github.com/ei5uke/13_signal_mks.git
+	branch = main
