added siniscalcoFra submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,7 @@
 	path = hirotaEis
 	url = https://github.com/ei5uke/13_signal_mks.git
 	branch = main
+[submodule "siniscalcoFra"]
+	path = siniscalcoFra
+	url = https://github.com/NopeSiniscalco/13_signal_mks.git
+	branch = main
