--- a/.gitmodules
+++ b/.gitmodules
@@ -129,3 +129,7 @@
 	path = linLei
 	url = https://github.com/llin11/13_signal.git
 	branch = main
+[submodule "hernandezCar"]
+	path = hernandezCar
+	url = https://github.com/KarlWithK/13_signal_mks.git
+	branch = master
