readded Jacky sub

--- a/.gitmodules
+++ b/.gitmodules
@@ -134,3 +134,7 @@
 	path = chanSer
 	url = https://github.com/schan11/signal.git
 	branch = master
+[submodule "chenJac"]
+	path = chenJac
+	url = https://github.com/jchen2003/13_signal.git
+	branch = main
